force-app/main/default/objects/copado__TestTool__mdt/copado__TestTool__mdt.object-meta.xml
<CustomObject>
    <label>Test Tool</label>
    <pluralLabel>Test Tools</pluralLabel>
</CustomObject>