force-app/main/default/objects/copado__TestTool__mdt/fields/copado__Automate_Test_Readiness__c.field-meta.xml
<CustomField>
    <fullName>copado__Automate_Test_Readiness__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If ticked, test records created in the Test object or as a quality gate are automatically marked as Ready to Run. No manual configuration is required before their execution.</inlineHelpText>
    <label>Automate Test Readiness</label>
    <type>Checkbox</type>
</CustomField>