force-app/main/default/objects/copado__TestTool__mdt/fields/copado__ExcludeFromValidationPromotion__c.field-meta.xml
<CustomField>
    <fullName>copado__ExcludeFromValidationPromotion__c</fullName>
    <label>Exclude from Validation Promotion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>