force-app/main/default/objects/copado__TestTool__mdt/fields/copado__JobTemplate__c.field-meta.xml
<CustomField>
    <fullName>copado__JobTemplate__c</fullName>
    <label>Job Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>