force-app/main/default/objects/copado__TestTool__mdt/fields/copado__Quality_Gates_Readiness_Logic__c.field-meta.xml
<CustomField>
    <fullName>copado__Quality_Gates_Readiness_Logic__c</fullName>
    <inlineHelpText>API Name of the Apex class that validates if the Quality Gate Rule configuration is complete. This validation is triggered when a user saves a new Quality Gate Rule. If the validation fails, the Quality Gate Rule cannot be saved until the user completes the missing configuration. The Apex class must implement the interface with name “QualityGateReadinessInterface”.</inlineHelpText>
    <label>Quality Gates Readiness Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>