force-app/main/default/objects/copado__TestTool__mdt/fields/copado__Requires_Manual_Interaction__c.field-meta.xml
<CustomField>
    <fullName>copado__Requires_Manual_Interaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this testing tool requires manual intervention. When checked, the system determines this step to be completed by human interaction only</description>
    <inlineHelpText>Check this box if this test tool cannot be completed automatically and a human interaction is necessary.</inlineHelpText>
    <label>Requires Manual Interaction</label>
    <type>Checkbox</type>
</CustomField>