force-app/main/default/objects/copado__TestTool__mdt/fields/copado__UserStoryBundleTestsUnifierLogic__c.field-meta.xml
<CustomField>
    <fullName>copado__UserStoryBundleTestsUnifierLogic__c</fullName>
    <inlineHelpText>API Name of the apex class that unifies all the tests record related to user stories that are bundled. The apex class must extend the class with name “UserStoryBundleTestsUnifier”.</inlineHelpText>
    <label>User Story Bundle Tests Unifier Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>